syntax = "proto3";

package linkerd2.config;

import "google/protobuf/duration.proto";

option go_package = "github.com/linkerd/linkerd2/controller/gen/config";

message All {
  Global global = 1;
  Proxy proxy = 2;
}

message Global {
  string linkerd_namespace = 1;
  bool cni_enabled = 2;
  string version = 3;

  // null indicates TLS is disabled.
  // Otherwise, a non-null struct indicates the equivalence
  // of --tls=optional.
  IdentityContext identity_context = 4;

  string installation_uuid= 5;
}

message Proxy {
  Image proxy_image = 1;
  Image proxy_init_image = 2;

  Port control_port = 3;
  repeated Port ignore_inbound_ports = 4;
  repeated Port ignore_outbound_ports = 5;
  Port inbound_port = 6;
  Port admin_port = 7;
  Port outbound_port = 8;

  ResourceRequirements resource = 9;

  int64 proxy_uid = 10;
  LogLevel log_level = 11;
  bool disable_external_profiles = 12;
}

message Image {
  string image_name = 1;
  string pull_policy = 2;
}

message Port {
  uint32 port = 1;
}

message ResourceRequirements {
  string request_cpu = 1;
  string request_memory = 2;
  string limit_cpu = 3;
  string limit_memory = 4;
}

message IdentityContext {
  string trust_domain = 1;
  string trust_anchors_pem = 2;

  google.protobuf.Duration issuance_lifetime = 3;
  google.protobuf.Duration clock_skew_allowance = 4;
}

message LogLevel {
  string level = 1;
}
